--- a/about.html
+++ b/about.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <!-- Header content goes here: logo, navigation bar -->
-    </header>
+   <header>
+  <img src="images/logo.png" alt="Sprout & Grow Logo" class="logo" />
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="register.html">Register</a></li>
+    </ul>
+  </nav>
+</header>
     <main>
         <!-- About page content goes here: company history, mission, team info -->
     </main>
