--- a/products.html
+++ b/products.html
@@ -8,8 +8,17 @@
 </head>
 <body>
     <header>
-        <!-- Header content goes here: logo, navigation bar -->
-    </header>
+  <img src="images/logo.png" alt="Sprout & Grow Logo" class="logo" />
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="products.html">Products</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="register.html">Register</a></li>
+    </ul>
+  </nav>
+</header>
     <main>
         <!-- Products page content goes here: product listings, descriptions, images -->
     </main>
