--- a/events.html
+++ b/events.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>
-  <img src="images/logo.png" alt="Sprout & Grow Logo" class="logo" />
+  <img src="sprout-grow-horizontal-524-transparent.jpg" alt="Sprout & Grow Logo" class="logo" />
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
