--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="products.html">Shop</a></li>
+      <li><a href="shop.html">Shop</a></li>
       <li><a href="events.html">Events</a></li>
       <li><a href="register.html">Register</a></li>
     </ul>
