--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
 <body>
    <header>
   <img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" />
-  <nav>
+    <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="products.html">Products</a></li>
+      <li><a href="shop.html">Shop</a></li>
       <li><a href="events.html">Events</a></li>
       <li><a href="register.html">Register</a></li>
     </ul>
