--- a/index.html
+++ b/index.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sprout & Grow</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-   <header>
-  <img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" />
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="register.html">Register</a></li>
-    </ul>
-  </nav>
-</header>
-    <main>
-        <!-- Home page main content goes here: hero image, intro text, etc. -->
-    </main>
-    <footer>
-        <!-- Footer content goes here: copyright info, social media links -->
-    </footer>
+  <header>
+    <img src="logo.png" alt="Sprout & Grow Logo" class="logo" />
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Welcome to Sprout & Grow 🌿</h1>
+
+    <img src="planting.jpg" alt="Hands planting a seedling in soil" class="float-img" />
+
+    <p>
+      At <strong>Sprout & Grow</strong>, we believe gardening is more than planting seeds — it's about growing
+      community. Whether you're starting with a windowsill herb pot or dreaming of raised garden beds, we’re
+      here to support your journey with helpful tips, workshops, and a friendly green-thumbed community.
+    </p>
+
+    <p>
+      🌼 Want to learn more about beginner gardening? Visit the 
+      <a href="https://garden.org" target="_blank">National Gardening Association</a> to dig deeper into resources.
+    </p>
+  </main>
+
+  <footer>
+    <p>Connect with us:</p>
+    <a href="https://www.facebook.com/login/" target="_blank">
+      <img src="facebook.png" alt="Facebook Logo" class="social-icon" />
+    </a>
+    <a href="https://twitter.com/login" target="_blank">
+      <img src="x-logo.png" alt="X Logo" class="social-icon" />
+    </a>
+    <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
+  </footer>
 </body>
 </html>
