--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <h1>Welcome to Sprout & Grow 🌿</h1>
 
-    <img src="planting.jpg" alt="Hands planting a seedling in soil" class="float-img" />
+    <img src="Planting.jpg" alt="Hands planting a seedling in soil" class="float-img" />
 
     <p>
       At <strong>Sprout & Grow</strong>, we believe gardening is more than planting seeds — it's about growing
