--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
   <footer>
     <p>Connect with us:</p>
     <a href="https://www.facebook.com/login/" target="_blank">
-      <img src="facebook.png" alt="Facebook Logo" class="social-icon" />
+      <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
     </a>
     <a href="https://twitter.com/login" target="_blank">
-      <img src="x-logo.png" alt="X Logo" class="social-icon" />
+      <img src="xlogo.jpg" alt="X Logo" class="social-icon" />
     </a>
     <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
   </footer>
