--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
     </a>
     <a href="https://twitter.com/login" target="_blank">
-      <img src="xlogo.jpg" alt="X Logo" class="social-icon" />
+      <img src="xlogo.png" alt="X Logo" class="social-icon" />
     </a>
     <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
   </footer>
