--- a/register.html
+++ b/register.html
@@ -22,8 +22,15 @@
     <main>
         <!-- Events page content goes here: event descriptions, calendars, registration links -->
     </main>
-    <footer>
-        <!-- Footer content goes here: copyright info, social media links -->
-    </footer>
+   <footer>
+    <p>Connect with us:</p>
+    <a href="https://www.facebook.com/login/" target="_blank">
+      <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
+    </a>
+    <a href="https://twitter.com/login" target="_blank">
+      <img src="xlogo.png" alt="X Logo" class="social-icon" />
+    </a>
+    <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
+  </footer>
 </body>
 </html>
