--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   Gardening is more than a hobby — it's a lifestyle. Whether you grow one pot or a full backyard oasis, the joy of watching something bloom is always worth the wait.
 </p>
 
-<img src="seedling.jpg" alt="Person watering garden bed" class="float-img-bottom" />
+<img src="seedlings.jpg" alt="Person watering garden bed" class="float-img-bottom" />
 
 <p>
   That’s why Sprout & Grow exists: to help nurture your connection with nature. Join us at a local workshop or browse beginner-friendly resources to get inspired 🌱.
