--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     <img src="Planting.jpg" alt="Hands planting a seedling in soil" class="float-img" />
 
     <p>
-      At <strong>Sprout & Grow</strong>, we believe gardening is more than planting seeds — it's about growing
-      community. Whether you're starting with a windowsill herb pot or dreaming of raised garden beds, we’re
-      here to support your journey with helpful tips, workshops, and a friendly green-thumbed community.
-    </p>
+      At Sprout & Grow, we believe gardening should feel like a conversation — not a chore. Whether you’re nurturing your very first basil plant or building out raised beds in your backyard, our mission is to provide the knowledge, encouragement, and sense of connection you need to thrive. We’re here to make plant care feel less intimidating and a whole lot more joyful.
 
     <p>
       🌼 Want to learn more about beginner gardening? Visit the 
@@ -37,13 +34,13 @@
     </p>
 
     <p>
-  Gardening is more than a hobby — it's a lifestyle. Whether you grow one pot or a full backyard oasis, the joy of watching something bloom is always worth the wait.
+ From step-by-step beginner guides to hands-on local workshops, Sprout & Grow offers tools for every kind of green thumb. Our team curates reliable, research-backed advice and easy-to-understand tips to help you feel confident in your garden — no matter your experience level. Think of us as your digital potting bench, where every question is welcome and every sprout is worth celebrating.
 </p>
 
 <img src="seedlings.jpg" alt="Person watering garden bed" class="float-img-bottom" />
 
 <p>
-  That’s why Sprout & Grow exists: to help nurture your connection with nature. Join us at a local workshop or browse beginner-friendly resources to get inspired 🌱.
+  Ready to dig in? Browse our seasonal plant picks, sign up for upcoming community events, or explore our free resource library. Because with Sprout & Grow, you’re not just growing plants — you’re growing a lifestyle rooted in curiosity, sustainability, and connection.
 </p>
 
   </main>
