--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </header>
 
   <main>
-    <h1>Welcome to Sprout & Grow 🌿</h1>
-
+    <h1>Grow With Confidence — One Leaf at a Time 🌿</h1>
+    
     <img src="Planting.jpg" alt="Hands planting a seedling in soil" class="float-img" />
 
     <p>
