--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <p>
  From step-by-step beginner guides to hands-on local workshops, Sprout & Grow offers tools for every kind of green thumb. Our team curates reliable, research-backed advice and easy-to-understand tips to help you feel confident in your garden — no matter your experience level. Think of us as your digital potting bench, where every question is welcome and every sprout is worth celebrating.
 </p>
-
+<div class="float-wrapper">
 <img src="seedlings.jpg" alt="Person watering garden bed" class="float-img-bottom" />
-
+</div>div>
 <p>
   Ready to dig in? Browse our seasonal plant picks, sign up for upcoming community events, or explore our free resource library. Because with Sprout & Grow, you’re not just growing plants — you’re growing a lifestyle rooted in curiosity, sustainability, and connection.
 </p>
