--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
+    <div class="float-wrapper">
     <img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" />
+    </div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
