--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main>
     <h1>Grow With Confidence — One Leaf at a Time 🌿</h1>
     
-    <img src="Planting.jpg" alt="Hands planting a seedling in soil" />
+    <img src="Planting.jpg" class="hands" alt="Hands planting a seedling in soil" />
 
     <p>
       At Sprout & Grow, we believe gardening should feel like a conversation — not a chore. Whether you’re nurturing your very first basil plant or building out raised beds in your backyard, our mission is to provide the knowledge, encouragement, and sense of connection you need to thrive. We’re here to make plant care feel less intimidating and a whole lot more joyful.
