--- a/about.html
+++ b/about.html
@@ -20,7 +20,17 @@
   </nav>
 </header>
     <main>
-        <!-- About page content goes here: company history, mission, team info -->
+    <section class="about-section">
+      <h1>About Sprout & Grow</h1>
+      <p>Sprout & Grow is dedicated to inspiring a lifelong love of gardening. 
+      We provide high-quality plant kits, seeds, and expert advice to gardeners of all skill levels.
+      Our mission is to make gardening accessible, joyful, and sustainable for everyone.</p>
+
+      <p>Founded with a passion for nature, Sprout & Grow believes that even the smallest seed can spark 
+      a big change. Whether you’re starting your first windowsill garden or expanding a backyard oasis,
+      we’re here to help you flourish.</p>
+    </section>
+  </main>
     </main>
     <footer>
     <p>Connect with us:</p>
