--- a/events.html
+++ b/events.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Events | Sprout & Grow</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <header>
- <img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" />
-     <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="register.html">Register</a></li>
-    </ul>
-  </nav>
-</header>
-    <main>
-        <!-- Events page content goes here: event descriptions, calendars, registration links -->
-    </main>
-   <footer>
-    <p>Connect with us:</p>
-    <a href="https://www.facebook.com/login/" target="_blank">
-      <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
+
+  <header>
+    <a href="index.html">
+      <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
     </a>
-    <a href="https://twitter.com/login" target="_blank">
-      <img src="xlogo.png" alt="X Logo" class="social-icon" />
-    </a>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="events-section">
+      <h1>Upcoming Events</h1>
+      <ul>
+        <li><strong>Spring Planting Workshop:</strong> April 20, 2025 — Learn how to start your own vegetable garden.</li>
+        <li><strong>Kids' Gardening Day:</strong> May 4, 2025 — Fun, hands-on activities for little growers!</li>
+        <li><strong>Composting Basics Seminar:</strong> May 18, 2025 — Turn kitchen scraps into garden gold.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
     <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
