--- a/shop.html
+++ b/shop.html
@@ -1,36 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Products | Sprout & Grow</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-<img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" />
+
+  <header>
+    <a href="index.html">
+      <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
+    </a>
     <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="register.html">Register</a></li>
-    </ul>
-  </nav>
-</header>
-    <main>
-        <!-- Products page content goes here: product listings, descriptions, images -->
-    </main>
-   <footer>
-    <p>Connect with us:</p>
-    <a href="https://www.facebook.com/login/" target="_blank">
-      <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
-    </a>
-    <a href="https://twitter.com/login" target="_blank">
-      <img src="xlogo.png" alt="X Logo" class="social-icon" />
-    </a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="products-section">
+      <h1>Our Products</h1>
+      <ul>
+        <li><strong>Starter Garden Kit:</strong> Perfect for beginners — includes seeds, soil, and instructions.</li>
+        <li><strong>Heirloom Seed Pack:</strong> A hand-picked selection of beautiful, rare seeds.</li>
+        <li><strong>Indoor Herb Kit:</strong> Grow fresh herbs like basil, mint, and thyme in your kitchen.</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
     <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
