--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="float-wrapper">
-    <img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" />
+    <a href="sprout-and-grow.com/index.html"><img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" /></a>
     </div>
     <nav>
       <ul>
