--- a/events.html
+++ b/events.html
@@ -9,9 +9,7 @@
 <body>
 
   <header>
-    <a href="index.html">
-      <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
-    </a>
+       <a href="sprout-and-grow.com/index.html"><img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" /></a>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
