--- a/about.html
+++ b/about.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <header>
-  <img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" />
-    <nav>
+  <header>
+  <a href="index.html">
+    <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
+  </a>
+  <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
