--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <div class="float-wrapper">
-    <a href="sprout-and-grow.com/index.html"><img src="logo.jpg" alt="Sprout & Grow Logo" class="logo" /></a>
-    </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="shop.html">Shop</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="register.html">Register</a></li>
-      </ul>
-    </nav>
-  </header>
-
+ <header>
+  <a href="index.html">
+    <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
+  </a>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="register.html">Register</a></li>
+    </ul>
+  </nav>
+</header>
   <main>
     <h1>Grow With Confidence — One Leaf at a Time 🌿</h1>
     
