--- a/products.html
+++ b/products.html
@@ -9,19 +9,19 @@
 <body>
 
   <header>
-    <a href="index.html">
-      <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
-    </a>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="register.html">Register</a></li>
-      </ul>
-    </nav>
-  </header>
+  <a href="index.html">
+    <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
+  </a>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="register.html">Register</a></li>
+    </ul>
+  </nav>
+</header>
 
   <main>
     <section class="products-section">
