--- a/shop.html
+++ b/shop.html
@@ -3,34 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products | Sprout & Grow</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Shop | Sprout & Grow</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
- <header>
-  <a href="index.html">
-    <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
-  </a>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="register.html">Register</a></li>
-    </ul>
-  </nav>
-</header>
+  <header>
+    <a href="index.html">
+      <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
+    </a>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
-    <section class="products-section">
-      <h1>Our Products</h1>
-      <ul>
-        <li><strong>Starter Garden Kit:</strong> Perfect for beginners — includes seeds, soil, and instructions.</li>
-        <li><strong>Heirloom Seed Pack:</strong> A hand-picked selection of beautiful, rare seeds.</li>
-        <li><strong>Indoor Herb Kit:</strong> Grow fresh herbs like basil, mint, and thyme in your kitchen.</li>
-      </ul>
+    <section>
+      <h1>Shop</h1>
+      <p>Explore our gardening kits, seeds, and supplies to start your perfect garden!</p>
     </section>
   </main>
 
