--- a/events.html
+++ b/events.html
@@ -4,32 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Events | Sprout & Grow</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <header>
-  <a href="index.html">
-    <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
-  </a>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="events.html">Events</a></li>
-      <li><a href="register.html">Register</a></li>
-    </ul>
-  </nav>
-</header>
+    <a href="index.html">
+      <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
+    </a>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="register.html">Register</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
-    <section class="events-section">
+    <section>
       <h1>Upcoming Events</h1>
       <ul>
-        <li><strong>Spring Planting Workshop:</strong> April 20, 2025 — Learn how to start your own vegetable garden.</li>
-        <li><strong>Kids' Gardening Day:</strong> May 4, 2025 — Fun, hands-on activities for little growers!</li>
-        <li><strong>Composting Basics Seminar:</strong> May 18, 2025 — Turn kitchen scraps into garden gold.</li>
+        <li><strong>Spring Planting Workshop:</strong> April 20, 2025</li>
+        <li><strong>Kids' Gardening Day:</strong> May 4, 2025</li>
+        <li><strong>Composting Basics Seminar:</strong> May 18, 2025</li>
       </ul>
     </section>
   </main>
