--- a/shop.html
+++ b/shop.html
@@ -3,36 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shop | Sprout & Grow</title>
+  <title>Page Title Here | Sprout & Grow</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <header>
-    <a href="index.html">
-      <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
-    </a>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="shop.html">Shop</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="register.html">Register</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <a href="index.html">
+    <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
+  </a>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="events.html">Events</a></li>
+      <li><a href="register.html">Register</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <main>
-    <section>
-      <h1>Shop</h1>
-      <p>Explore our gardening kits, seeds, and supplies to start your perfect garden!</p>
-    </section>
-  </main>
+<main>
+  <section>
+    <h1>Page Title Here</h1>
+    <p>Page content goes here!</p>
+  </section>
+</main>
 
-  <footer>
-    <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
