--- a/shop.html
+++ b/shop.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Title Here | Sprout & Grow</title>
+  <title>Shop | Sprout & Grow</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-   <a href="index.html">
+  <a href="index.html">
     <img src="sprout-grow-horizontal-524.png" alt="Sprout & Grow Logo" class="logo">
   </a>
   <nav>
@@ -25,12 +25,27 @@
 
 <main>
   <section>
-    <h1>Page Title Here</h1>
-    <p>Page content goes here!</p>
+    <h1>Our Shop</h1>
+    <img src="seedlings.jpg" alt="Seedlings growing" class="small-image">
+
+    <p>Welcome to the Sprout & Grow shop! Here you can find everything you need to start or expand your garden.</p>
+
+    <ul>
+      <li><strong>Starter Garden Kit:</strong> Includes soil, seeds, pots, and easy instructions to begin your garden journey.</li>
+      <li><strong>Heirloom Seed Collection:</strong> Rare and beautiful seeds passed down through generations.</li>
+      <li><strong>Indoor Herb Kits:</strong> Fresh basil, mint, and thyme — right from your windowsill!</li>
+      <li><strong>Organic Fertilizer:</strong> Support strong, healthy growth for all your plants.</li>
+    </ul>
+
+    <p>Explore more at our upcoming events or reach out to us with any questions. We are excited to help you grow!</p>
   </section>
 </main>
 
 <footer>
+  <p>Connect with us:</p>
+  <a href="https://www.facebook.com/login/">
+    <img src="facebooklogo.png" alt="Facebook logo">
+  </a>
   <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
 </footer>
 
