--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
   </main>
     </main>
     <footer>
+        <div class="footer-content">
     <p>Connect with us:</p>
     <a href="https://www.facebook.com/login/" target="_blank">
       <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
@@ -43,6 +44,7 @@
       <img src="xlogo.png" alt="X Logo" class="social-icon" />
     </a>
     <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
+        </div>
   </footer>
 </body>
 </html>
