--- a/events.html
+++ b/events.html
@@ -35,7 +35,16 @@
   </main>
 
   <footer>
+        <div class="footer-content">
+    <p>Connect with us:</p>
+    <a href="https://www.facebook.com/login/" target="_blank">
+      <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
+    </a>
+    <a href="https://twitter.com/login" target="_blank">
+      <img src="xlogo.png" alt="X Logo" class="social-icon" />
+    </a>
     <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
+        </div>
   </footer>
 
 </body>
