--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
   </main>
 
-  <footer>
+ <footer>
+        <div class="footer-content">
     <p>Connect with us:</p>
     <a href="https://www.facebook.com/login/" target="_blank">
       <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
@@ -55,6 +56,7 @@
       <img src="xlogo.png" alt="X Logo" class="social-icon" />
     </a>
     <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
+        </div>
   </footer>
 </body>
 </html>
