--- a/shop.html
+++ b/shop.html
@@ -42,12 +42,17 @@
 </main>
 
 <footer>
-  <p>Connect with us:</p>
-  <a href="https://www.facebook.com/login/">
-    <img src="facebooklogo.png" alt="Facebook logo">
-  </a>
-  <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
-</footer>
+        <div class="footer-content">
+    <p>Connect with us:</p>
+    <a href="https://www.facebook.com/login/" target="_blank">
+      <img src="facebooklogo.png" alt="Facebook Logo" class="social-icon" />
+    </a>
+    <a href="https://twitter.com/login" target="_blank">
+      <img src="xlogo.png" alt="X Logo" class="social-icon" />
+    </a>
+    <p>&copy; 2025 Sprout & Grow. All rights reserved.</p>
+        </div>
+  </footer>
 
 </body>
 </html>
